matan do tretyey

--- a/ABSOLUTELY NEW CONSPECTY (3 sem)/mathanalys3.tex
+++ b/ABSOLUTELY NEW CONSPECTY (3 sem)/mathanalys3.tex
@@ -36,7 +36,7 @@
 \pagestyle{fancy} 
 \fancyhead{} 
 \fancyhead[LE,RO]{\thepage} 
-\fancyhead[CO]{\hyperlink{uk}{к списку объектов}}
+\fancyhead[CO]{\hyperlink{dex}{к списку объектов}}
 \fancyhead[LO]{\hyperlink{sod}{к содержанию}} 
 \fancyfoot{}
 \newtheoremstyle{indented}{0 pt}{0 pt}{\itshape}{}{\bfseries}{. }{0 em}{ }
@@ -86,6 +86,7 @@
 
         %letters_different
             \DeclareMathOperator{\CC}{\mathbb{C}}
+            \DeclareMathOperator{\QQ}{\mathbb{Q}}
             \DeclareMathOperator{\ZZ}{\mathbb{Z}}
             \DeclareMathOperator{\RR}{\mathbb{R}}
             \DeclareMathOperator{\NN}{\mathbb{N}}
@@ -356,6 +357,268 @@
 \begin{remark}
     Монотонность и линейность останутся при данном определении (последнее, конечно, опять таки при конечности хотя бы одного из интегралов). 
 \end{remark}
+
+\subsection{Произведение мер}
+\se{Произведение мер}{}
+Пусть $\GA$, $\GB$ - полукольца с мерами $\mu$ и $\nu$ соответственно. Определим функцию $\lambda: \GA \times \GB: \RR_{\geq 0} \cup \{+\infty\}$ по правилу $\lambda(A \times B)=\mu(A)\nu(B)$
+\begin{stat}
+$\lambda$ - мера на полукольце $\GA \times \GB$, т.е. для любых попарно дизъюнктных $C_1$, ... $C_n$, $C_i=A_i \times B_i$ и таких, что $\bigsqcup_{i=1}^n C_i =C = A \times B \in \GA \times \GB$, верно равенство $\lambda(\bigsqcup_{i=1}^n C_i)=\sum_{i=1}^n \lambda(C_i)$
+\end{stat}
+\begin{proof}
+По определению мер $\lambda(\bigsqcup_{i=1}^n C_i)=\mu(A)\nu(B)$, $\sum_{i=1}^n \lambda(C_i)=\sum_{i=1}^n \mu(A_i)\nu(B_i)$, поэтому мы будем доказывать равенство $\mu(A)\nu(B)=\sum_{i=1}^n \mu(A_i)\nu(B_i)$. Так как все $C_i$ попарно дизъюнктны, верно равенство $\chi_{C}(x, y) \sum_{i=1}^n \chi_{C_i}(x, y)$. Зафиксируем $x$, тогда функция-индикатор $\chi_{C_i}(x, y)$ на $\GA \times \GB$ превращается в функцию индикатор $\chi_{A_i}(x)\chi_{B_i}(y)$ на $\GB$. Проинтегрируем равенство по $y$, получим: $\chi_A(x)\nu(B)=\sum_{i=1}^n \chi_{A_i} \nu(B_i)$. Интегрируя теперь по $x$, получаем $\mu(A)\nu(B)=\sum_{i=1}^n \mu(A_i)\nu(B_i)$, что и требовалось.
+\end{proof}
+
+\subsection{Счётная аддитивность (она же $\sigma$-аддитивность)}
+\begin{defn}
+Пусть даны $\mathcal{D} \subseteq \Rho(X)$ - набор подмножеств множества $X$, и функция $\mu: \mathcal{D} \ra \RR_{\geq 0} \cup \{+\infty\}$. Эта функция называется \se{Счётно-аддитивная функция}{счётно-аддитивной} (или \se{$\sigma$-аддитивная функция}{$\sigma$-аддитивной}), если для любого не более чем счётного набора попарно дизъюнктных множеств $\{B_i\}$ таких, что их объединение $B=\bigsqcup B_i$ лежит в $\mathcal{D}$, верно равенство $\mu(B)=\sum \mu(B_i)$
+\end{defn}
+\begin{exl}
+\begin{itemize}
+    \item $\mathcal{D}=\Rho{X}$, и для любого $B \in \mathcal{D} \mu(B)=|B|$ - \textit{считающая функция}
+    \item Вероятностное пространство
+    \item $X=\RR$, $\mathcal{D}=P(\mathcal{\RR})$, $\mu([a, b))=b-a$
+    \item Модификация предыдущего примера: $\mu([a, b))=f(b)-f(a)$, где $f$ - монотонно возрастающая непрерывная функция
+    \item $X=\RR$, $\mathcal{D}=\{<a, b> | a, b \in \RR \cup \{\pm \infty\}\}$, $f$ - просто монотонно возрастающая функция. Тогда мера $\mu(<a, b>)=f(b)-f(a)$ не будет счётно-аддитивной. Но если мы определим меру так:
+    \begin{itemize}
+        \item $\mu([a, b))=\lim_{x \ra b_-} f(x)-\lim_{y \ra a_-} f(y)$
+        \item $\mu([a, b])=\lim_{x \ra b_+} f(x)-\lim_{y \ra a_-} f(y)$
+        \item $\mu((a, b])=\lim_{x \ra b_+} f(x)-\lim_{y \ra a_+} f(y)$
+        \item $\mu((a, b))=\lim_{x \ra b_-} f(x)-\lim_{y \ra a_+} f(y)$
+    \end{itemize}
+    то она уже будем счётно-аддитивной.
+\end{itemize}
+\end{exl}
+\begin{stat}
+Не существует "универсальной меры", т.е. функции $\mu: \Rho(\RR) \ra \RR_{\geq 0} \cup \{+\infty\}$, обладающей следующими свойствами:
+\begin{itemize}
+    \item $\mu(\emptyset)=0$
+    \item $\mu$ - счётноаддитивна
+    \item $\mu([0, 1])=1$
+    \item Для любых $A \subseteq \RR$ и $x \in \RR$ верно равенство $\mu(A+x)=\mu(A)$
+\end{itemize}
+\end{stat}
+\begin{proof}
+Предположим противное: такая функция существует. Определим на $\RR$ бинарное отношение $a \sim b \iff a-b \in \QQ$. Легко видеть, что это отношение эквивалентности. Воспользуемся аксиомой выбора и выберем по одному представителю из каждого класса так, чтобы они все лежали на отрезке $[0, 1]$. Образуем из них множество $A$. С одной стороны, $\mu(A)=\mu([0, 1])-\mu([0, 1] \backslash A) \geq 1 < \infty$. Рассмотрим множества $A_q=\{A+q\}$ для всех $q \in [0, 1] \cap \QQ$. Они попарно не пересекаются, их мера равна мере $A$, а их объединение лежит в отрезке $[-1, 2]$. Тогда $|0, 1] \cap \QQ| \cdot \mu(A) = \sum_{q \in [0, 1] \cap \QQ} \mu(A_q) = \mu(\bigsqcup_{q \in [0, 1] \cap \QQ}A_q) \leq \mu([-1, 2]) < \infty$, откуда $\mu(A)=0$. Но $\bigsqcup_{\lambda \in \QQ} A_{\lambda}=\RR$ $\implies \infty = \mu(\RR)=\sum_{\lambda \in \QQ} \mu(A_{\lambda})=\sum_{\lambda \in \QQ} 0 = 0$, противоречие.
+\end{proof}
+\begin{defn}
+Мера $\mu$, определённая на полукольце (кольце, алгебре и т.д.) $\GA \subseteq \Rho(X)$, называется \se{Регулярная мера}{регулярной}, если для любого $A \in \GA$ :
+\begin{itemize}
+    \item $\mu(A)=\inf_{G \in \GA, A \subseteq G, G \text{ - открытое}} \mu(G)$
+    \item $\mu(A)=\sup_{K \in \GA, K \subseteq A, K \text{ - компакт}} \mu(K)$
+\end{itemize}
+\end{defn}
+\begin{theorem}
+Регулярная мера $\mu$, определённая на кольце, счётноаддитивна.
+\end{theorem}
+\begin{proof}
+Пусть $\{A_i\}$ - попарно дизъюнктные элементы кольца, и $A=\bigsqcup A_i \in \GA$. Хотим доказать, что $\mu(A)=\sum \mu(A_i)$.
+\\
+В одну сторону это практически очевидно: для любого натурального $n$ $A_1 \cup ... \cup A_n \subseteq A$ $\implies$ $\sum_{i=1}^n \mu(A_i) = \mu(A_1 \cup ... \cup A_n ) \leq \mu(A)$. Переходя к пределу по $n$, получаем неравенство в одну сторону. 
+\\
+Теперь докажем, что для любого $\epsilon > 0$ верно неравенство $\sum \mu(A_i) \geq \mu(A)-2 \epsilon$, откуда и будет следовать неравенство во вторую сторону. Для этого выберем компакт $K \subseteq A$ такой, что $\mu(K) \geq \mu(A)-\epsilon$, а для каждого $A_i$ - такое $G_i$, что $\mu(G_i) \leq \mu(A_i)+\frac{\epsilon}{2^i}$. Так как $\bigsqcup A_i = A \supset K$, то и $\bigcup G_i \supset K$, а тогда можно выбрать конечное подпокрытие $G_{i_1}$, ... $G_{i_s}$. В итоге $\mu(K) \leq \sum_{j=1}^s \mu(G_{i_j}) \leq \sum_{j=1}^s \mu(A_i)+ \frac{\epsilon}{2^{i_j}} < \sum_{j=1}^{\infty} \mu(A_i) + \epsilon$ $\implies $ $\sum \mu(A_i) \geq \mu(K)-\epsilon \geq \mu(A)-2\epsilon$, что и требовалось.
+\end{proof}
+\subsection{Счётно-аддитивные структуры}
+\begin{defn}
+Непустое $\GA \subseteq \Rho(X)$ называется \se{$\sigma$-алгебра}{$\sigma$-алгеброй}, если для любого не более чем счётного набора множеств $\{A_i\}$ их объединение и пересечение и $X \backslash A_i$ также лежат в $\GA$
+\end{defn}
+\begin{remark}
+$\emptyset = A \cap (X \backslash A)$, $X= A \cup (X \backslash A)$, $A \backslash B = A \cap (X \backslash B)$ также лежат в $\GA$.
+\end{remark}
+\begin{remark}
+Если $\{A_i\}_{i \in I}$ - произвольный набор $\sigma$-алгебр над каким-то множеством, то $\bigcap_{i \in I} A_i$ - тоже $\sigma$-алгебра.
+\end{remark}
+\begin{defn}
+Пусть $\mathcal{D} \subseteq \Rho(X)$. \se{Порождённая $\sigma$-алгебра}{$\sigma$-алгебра, порождённая $\mathcal{D}$} - это наименьшая $\sigma$-алгебра, содержащая $\mathcal{D}$. мы будем обозначать её $\overline{\mathcal{D}}$
+\end{defn}
+\begin{stat}
+Для любого $\mathcal{D} \subseteq \Rho(X)$ порождённая $sigma$-алгебра существует и единственна.
+\end{stat}
+\begin{proof}
+Хотя бы одна $\sigma$-алгебра, содержащая $\mathcal{D}$, существует: это просто $\Rho(X)$. Но тогда если $\{A_i\}_{i \in I}$ - все такие $\sigma$-алгебры, то $\bigcap_{i \in I} A_i$ - наименьшая.
+\end{proof}
+\begin{stat}
+Любое открытое и замкнутое множество на прямой содержится в $\overline{P(\RR)}$
+\end{stat}
+\begin{proof}
+Заметим, что интервал $(a, b)$ представляется в виде счётного объединения ячеек $\bigcup_{n \in \NN} [a+\frac{1}{n}, b)$, а любое открытое подмножество прямой является объединением не более чем счётного объединения попарно непересекающихся открытых интервалов и лучей. Если же какое-то $A$ замкнуто, то $\RR \backslash A$ открыто и представляется в виде $\bigcup P_i$, $P_i \in P(\RR)$. Тогда $A=X \backslash (\bigcup P_i) = \bigcap (X \backslash P_i)$ тоже представимо в виде не более, чем счётного объединения элементов из $P(\RR)$, а потому лежит в $\overline{P(\RR)}$.
+\end{proof}
+\begin{stat}
+Пусть $\GA \subseteq \Rho(X)$ - алгебра, и известно, что для любых $\{E_i\}_{i=1}^{\infty} \in \GA$, $\bigcap_{i=1}^{\infty} E_i$ также принадлежит $\GA$. Тогда $A$ - $\sigma$-алгебра. 
+\end{stat}
+\begin{proof}
+Надо проверить, что если $\{F_i\}_{i=1}^{\infty} \in \GA$, то $\bigcup_{i=1}^{\infty} F_i$ также принадлежит $\GA$. Но $\bigcup_{i=1}^{\infty} F_i = X \backslash (\bigcap (X \backslash F_i))$, т.е. лежит в $\GA$.
+\end{proof}
+\begin{remark}
+Можно доказать и в обратную сторону (т.е. из счётного объединения вывести счётное пересечение), причём дополнительно можно наложить условие попарной дизъюнктности рассматриваемых множеств - доказательство будет аналогичным (только во втором случае придётся ввести новую последовательность множеств $\{G_i\}$, определённую по индукции $G_1=E_1$, $G_k=E_k \backslash (E_1 \cup ... \cup E_{k-1})$)
+\end{remark}
+\subsection{Внешняя мера}
+\begin{defn}
+Пусть $\GA \subseteq \Rho(X)$ - полукольцо с (конечно-аддитивной) мерой $\mu$. Определим функцию $\mu^*: \Rho(X) \ra \RR_{\geq 0} \cup \{+\infty\}$ по правилу $\mu^*(A) = \inf(\sum \mu(A_i) | \{A_i\} \in \GA, \bigcup A_i \supset A)$ (т.е. инфимум по всем покрытиям множества $A$ элементами полукольца) и назовём её \se{Внешняя мера}{внешней мерой}.
+\end{defn}
+\begin{stat}
+\begin{enumerate}
+\
+    \item $\mu^*(A) \leq \mu(A)$
+    \item Монотонность: если $A \subseteq B$, то $\mu^*(A) \leq \mu^*(B)$
+    \item \se{Счётная полуаддитивность}{Счётная полуаддитивность}: Если $\{A_i\} \in \GA$, и $\bigcup A_i \in \GA$ то $\mu^*(\bigcup A_i) \leq \sum \mu^*(A_i)$
+    \item Если $\mu$ - счётно-аддитивна, то $\mu^*_{\upharpoonright \GA} = \mu$
+\end{enumerate}
+\end{stat}
+\begin{proof}
+\
+
+\begin{enumerate}
+    \item $A$ - это одно из покрытий самого себя.
+    \item $B$ - это одно из покрытий множества $A$.
+    \item Обозначим $A=\bigcup A_i$. Если для какого-то $i$ $\mu^*(A_i)=\infty$, то неравенство очевидно, поэтому далее считаем, что все $\mu^*(A_i)< \infty$. Зафиксируем произвольное $\epsilon > 0$. Для каждого $A_n$ существует покрытие $\{B_{n_k}\}_{k \geq 1}$ элементами полукольца, для которого $\mu^*(A_i)> \sum_{k \geq 1} \mu(B_{n_k}) - \frac{\epsilon}{2^n}$. Тогда $\bigcup_{n, k} B_{n_k}$ - покрытие $A$, и $\mu^*(A) \leq \sum_{n, k}\mu(B_{n_k}) < \sum \mu(A_i) + \epsilon $. Значит,  $\mu^*(A) \leq \sum \mu^*(A_i)$, что и требовалось.
+    \item Введём вспомогательную функицю $\overline{\mu}$, которая определяется так же, как и $\mu^*$, только теперь мы на каждое рассматриваемое покрытие дополнительно наложили ограничение попарной дизъюнктности составляющих его множеств. 
+    \\
+    Докажем для начала, что $\overline{\mu}=\mu*$. То, что $\overline{\mu}(A) \geq \mu^*(A)$, очевидно - во втором случае инфимум берётся по большему множеству. Зафиксируем теперь $\epsilon > 0$ и будем доказывать, что $\overline{\mu}(A) \leq \mu^*(A)+\epsilon$. Для этого рассмотрим покрытие $A$ такими множествами $\{A_i\} \in \GA$, что $\sum \mu(A_i) \leq \mu^*(A)+\epsilon$. Определим последовательность множеств $\{B_i\}$ по правилу $B_1:=A_1$ и $B_k = A_k \backslash (A_1 \cup ... A_{k-1})$ при $k>1$. Все $B_i$, во-первых, попарно дизъюнктны, а во-вторых, представляются в виде конечного объединения попарно дизъюнктных элементов полукольца (см. утверждение из раздела "алгебраические структуры подмножеств"). Для определённости, пусть $B_i= \bigsqcup_j B_{i, j}$. Тогда $\{C_{i, j}\}$ - покрытие множества $A$ попарно непересекающимися элементами полукольца, откуда мы заключаем, то $\overline{\mu}(A) \leq \sum_{i, j} \mu(C_{i, j}) = \sum \mu(A_i) \leq \mu^*(A)+\epsilon$. В последнем равенстве мы воспользовались счётной аддитивностью меры $
+    \mu$ и тем, что $\bigsqcup_{i, j} C_{i, j} = \bigcup A_i \supset A$
+    \\ 
+    Вернёмся к исходному утверждению. Пусть $A \in \GA$. Так как $A$ - само себе дизъюнктное покрытие, то $\overline{\mu}(A) \leq \mu(A)$. С другой стороны, для любого $\epsilon > 0$ существует покрытие $A$ попарно дизъюнктными элементами полукольца $\{A_i\} \in \GA$, для которого $\sum \mu(A_i) \leq \overline{\mu}(A)+\epsilon$. Собирая два последних предложения вместе и пользуясбь счётной аддитивностью $\mu$, получаем: $\mu(A) = \sum \mu(A \cap A_i) \leq \sum \mu(A_i) \leq \overline{\mu}(A)+\epsilon$. Так как это выполнено для любого $\epsilon>0$, то $\mu(A) \leq \overline{\mu}(A)=\mu^*(A)$. Но всегда верно обратное неравенство $\mu(A) \geq \mu^*(A)$, откуда мы и получаем требуемое равенство мер.
+\end{enumerate}
+\end{proof}
+\subsection{Теорема Лебега-Каратеодори}
+\begin{defn}
+Пусть $X$ - множество произвольной природы. Монотонную и счётно-полуаддитивную функцию $\gamma: \Rho(X) \ra \RR_{\geq 0} \cup \{\infty\}$, такую, что $\gamma(\emptyset)=0$, мы назовём \se{Предмера}{предмерой} на множестве $X$.
+\end{defn}
+\begin{defn}
+Множество $E \subseteq X$ называется \se{$\gamma$-измеримое множество}{$\gamma$-измеримым}, если для любого $A \subseteq X$ верно равенство $\gamma(A) = \gamma(A \cap E) + \gamma(A \backslash E)$ или, что равносильно, $\gamma(A)=\gamma(A \cap E) + \gamma (A \cap E^{c})$
+\end{defn}
+\begin{remark}
+Внешняя мера - это предмера
+\end{remark}
+\begin{theorem}
+\se{Теорема Лебега-Каратеодори}{Теорема Лебега-Каратеодори}
+\\
+Пусть $\gamma$ - предмера на множестве $X$, и $\Sigma \subseteq \Rho(X)$ - набор всех $\gamma$- измеримых подмножеств. Тогда:
+\begin{enumerate}
+    \item $\Sigma$ - $\sigma$-алгебра
+    \item $\gamma_{\upharpoonright \Sigma}$ - счётно-аддитивная мера на $\Sigma$.
+    \item Пусть $\GA$ - полукольцо на $X$, и $\mu$ - (конечно) аддитивная мера на нём. Если мы определим $\gamma:=\mu^*$, то $\Sigma \supset \overline{\GA}$.
+\end{enumerate}
+\end{theorem}
+
+\begin{proof}
+\
+\begin{itemize}
+
+    \item Сначала докажем, что $\Sigma$ - это (обычная) алгебра.
+    \\
+    $\gamma(A)=\gamma(A)+\gamma(\emptyset) = \gamma(A \backslash \emptyset)+\gamma(A \cap \emptyset)$ $\implies$ $\emptyset \in \Sigma$. Аналогично, $X \in \Sigma$.
+    \\
+    Если $E \in \Sigma$, то $E^{c} \in \Sigma$ - следует из симметричного определения измеримой функции. 
+    \\
+    Так как $A \cup B = X \backslash ((X \backslash A) \cap (X \backslash B))$, то достаточно проверить только, что если $E_1$, $E_2$ $\in \Sigma$, то $E_1 \cap E_2 \in \Sigma$. Хотим: $\gamma(A)=\gamma(A \cap (E_1 \cap E_2))+\gamma(A \backslash (E_1 \cap E_2))$. Воспользуемся теперь определением $\gamma$-измеримого множества и подставим туда различные пары множеств:
+    \\
+    \begin{equation*}
+\begin{cases}
+  \gamma(A)=\gamma(A \cap E_1)+\gamma(A \backslash E_1),  & \mbox{ - подставили пару } (A, E_1) \\
+  \gamma(A \cap E_1) = \gamma(A \cap E_1 \cap E_2)+ \gamma ((A \cap E_1) \backslash E_2)  & \mbox{ - подставили пару } (A \cap E_1, E_2) \\
+  \gamma(A \backslash(E_1 \cap E_2)) = \gamma(A \backslash E_1)+\gamma((A \cap E_1) \backslash E_2) & \mbox{ - подставили пару } (A \backslash (E_1 \cap E_2), E_1)
+\end{cases}
+\end{equation*}
+\
+
+Выражая $\gamma(A \cap E_1)$ из первого уравнения во второе, получаем равенство $\gamma(A) = \gamma(A \cap E_1 \cap E_2) + \gamma (A \backslash E_1)+\gamma((A \cap E_1) \backslash E_2)$, но правая часть по третьему равенству равна в точности $\gamma(A \cap E_1 \cap E_2)+\gamma(A \backslash (E_1 \cap E_2))$. Мы доказали, что множество $E_1 \cap E_2$ тоже $\gamma$-измеримо.
+\item Теперь покажем, что $\gamma_{\upharpoonright \Sigma}$ - аддитивна.
+\\
+Пусть $E_1, E_2 \in \Sigma$ - дизъюнктные множества. Тогда $\gamma(E_1 \cup E_2) = \gamma((E_1 \cup E_2) \backslash E_2)+\gamma((E_1 \cup E_2) \cap E_2) = \gamma(E_1)\cap \gamma(E_2)$, что и требовалось.
+\item Следующий шаг - доказать, что $\Sigma$ - это $\sigma$-алгебра.
+\\
+Мы помним, что достаточно доказывать утверждение про объединение попарно дизъюнктных множеств: если $\{E_i\} \in \Sigma$ - попарно дизъюнктны, то $E=\bigsqcup E_i \in \Sigma$, т.е. что для любого $A \subseteq X$ верно равенство $\gamma(A) = \gamma(A \cap E)+\gamma(A \backslash E)$. Как и раньше, нам достаточно вместо равенства доказать неравенство в обе стороны. Неравенство $LHS \leq RHS$ верно в силу полуаддитивности $\gamma$. Будем доказывать неравенство в обратную сторону. Сразу отметим, что если $\gamma(A)=\infty$, то оно верно, поэтому далее мы считаем, что $\gamma(A)< \infty$. Для любого натурального $n$: $\gamma(A) = \gamma(A \cap \bigcup_{i=1}^n E_i)+\gamma(A \backslash \bigcup_{i=1}^n E_i) \geq \gamma(A \cap \bigcup_{i=1}^n E_i)+\gamma(A \backslash E)$. 
+\\
+Докажем, что для любого натурального $n$ верно соотношение $\gamma(A \cap \bigsqcup_{i=1}^n E_i) = \sum_{i=1}^n \gamma(A \cap E_i)$. Переход практически очевиден, поэтому сосредоточим наше внимание на базе: $\gamma(A \cap (E_1 \cup E_2)) = \gamma(A \cap E_1) + \gamma(A \cap E_2)$. Но это ни что иное, как определение измеримости для пары $(A \cap (E_1 \cup E_2), E_1)$. 
+\\
+Комбинируя результаты двух последних абзацев, получаем неравенство $\gamma(A) \geq \sum_{i=1}^n \gamma(A \cap E_i)+\gamma(A \backslash E)$. Так как $\gamma(A) < \infty$, мы можем перейти к пределу по $n$ и получить неравенство $\gamma(A) \geq \sum_{i=1}^{\infty} \gamma(A \cap E_i)+\gamma(A \backslash E) \geq \gamma(A \cap E) + \gamma(A \backslash E)$ (в последнем переходе мы воспользовались счётной полуаддитивностью $\gamma$).
+\item $\gamma_{\upharpoonright \Sigma}$ - счётно-аддитивная функция.
+\\
+Пусть есть счётный набор $\{E_i\} \subseteq \Sigma$ попарно дизъюнктных множеств. Мы уже доказали, что $E = \bigsqcup E_i \in \Sigma$. Хотим доказать, что $\sum_{i=1}^{\infty} = \gamma(E)$. Неравенство $LHS \geq RHS$ выполняется в силу полуаддитивности, поэтому мы будем доказывать неравенство $LHS \leq RHS$.
+\\
+Для любого натурального $n$ верно соотношение $\gamma(E)=\gamma(E \cap (E_1 \cup ... \cup E_n))+\gamma(E \backslash (E_1 \cup ... \cup E_n)) \geq \gamma(E \cap (E_1 \cup ... \cup E_n)) = \sum_{i=1}^n \gamma(E_i)$. переходя к пределу по $n$, получаем требуемое неравенство.
+\item Достаточно показать, что $\GA \subseteq \Sigma$. Пусть $E \in \GA$. Надо доказать, что для любого $A \subseteq X$ $\mu^*(A)=\mu^*(A \cap E)+\mu^*(A \backslash E)$. Опять-таки, в силу полуаддитивности $\mu^*$ достаточно доказать только неравенство $\mu^*(A) \geq \mu^*(A \cap E)+\mu^*(A \backslash E)$ и, как и в пункте 3, нетривиальным будет только случай $\mu^*(A) < \infty$. 
+\\
+Для любого $\epsilon > 0$ докажем, что $\mu^*(A)+\epsilon \geq \mu^*(A \cap E)+\mu^*(A \backslash E)$, из этого будет следовать требуемое. Можно выбрать $\{C_i\}_{i\geq 1}$ - такое покрытие $A$ попарно дизъюнктными элементами полукольца, что $\sum \mu(C_j) \leq \mu^*(A)+\epsilon$. Тогда $\{C_i \cap E\}_{i \geq 1} \subseteq \GA$ - покрытие $A \cap E$, откуда $\mu^*(A \cap E) \leq \sum_{i \geq 1} \mu(C_i \cap E)$. Также $C_i \backslash E=\bigsqcup_{j=1}^{n_i} D_{i, j}$ - конечное объединение попарно дизъюнктных элементов полукольца, а тогда $\{D_{i, j}\}$ - покрытие $A \backslash E$ $\implies$ $\mu^*(A \backslash E) \leq \sum_{i, j} \mu(D_{i, j}) = \sum_{i \geq 1} \mu(C_i \backslash E)$. Складывая два последних неравенства, получаем, что $\mu^*(A \cap E) + \mu^*(A \backslash E) \leq \sum_{i \geq 1} (\mu(C_i \cap E)+\mu(C_i \backslash E)) = \sum_{i \geq 1} \mu(C_i) \leq \mu^*(A)+\epsilon$. 
+\end{itemize}
+\end{proof}
+\subsection{Борелевские множества и мера Лебега}
+\begin{defn}
+Пусть $P(\RR^n)$ - полукольцо ячеек с естественной мерой $\mu$ (которая, как мы помним, счётно-аддитивна). Множества, измеримые относительно внешней меры $\mu^*$, образуют $\sigma$-алгебру (будем обозначать её $\Sigma$) и называются \se{Множества, измеримые по Лебегу}{измеримыми по Лебегу}, а $\mu^*$ от них обозначается буквой $\lambda$ и называется \se{Мера Лебега}{мерой Лебега}. 
+\end{defn}
+\begin{defn}
+Рассмотрим $\GB = \overline{P(\RR^n)}$ - $\sigma$-алгебра, натянутая на полукольцо ячеек $P(\RR^n)$. Она состоит из всевозможных счётных объединений и пересечений элементов $P(\RR^n)$ и называется \se{Борелевская $\sigma$-алгебра}{Борелевской $\sigma$-алгеброй}. Эта алгебра содержит, например, все открытые множества (так как любое открытое множество в $\RR^n$ можно представить в виде дизъюнктного объединения ячеек).
+\end{defn}
+\begin{remark}
+Любое измеримое по Борелю множество также измеримо и по Лебегу (в силу п.3 теоремы Лебега-Каратеодори), но обратное неверно. 
+\end{remark}
+\begin{remark}
+Мощность Борелевской алгебры - континуум, так как все её элементы получаются из изначального континуального набора $P(\RR^n)$ применением счётного числа пересечений и объединений.
+\end{remark}
+\begin{stat}
+Пусть $\gamma$ - предмера на $X$. Если $E \subseteq X$, и $\gamma(E)=0$, то $E$ - $\gamma$-измеримо. Как следствие, любое подмножество $\gamma$-измеримого и имеющего предмеру ноль множества также измеримо.
+\end{stat}
+\begin{proof}
+Пусть $A \subseteq X$ - произвольное подмножество. Пользуясь монотонностью и полуаддитивностью предмеры, напишем цепочку неравенств: $\gamma(A \backslash E) \leq \gamma(A) \leq \gamma(A \cap E)+ \gamma(A \backslash E) \leq \gamma(E)+\gamma(A \backslash E) = \gamma(A \backslash E)$. Значит, все неравенства обращаются в равенство, и $\gamma(A)= \gamma(A \cap E)+ \gamma(A \backslash E)$.
+\end{proof}
+\begin{exl}
+\begin{enumerate}
+    \item Отрезок в $\RR^n$, где $n \geq 2$, измерим (так как замкнут) и имеет меру Лебега, равную нулю, так как его можно зажать в прямоугольники сколь угодно малого объёма. По утверждению выше всего его подмножества, коих $2^{\text{КОНТИНУУМ}}$ штук, также измеримы. Значит, в $\RR^n$ множество измеримых по Лебегу функций имеет мощность $2^{\text{КОНТИНУУМ}}$ (больше не может, так как $|\RR^n| = |\RR|$).
+    \item На плоскости надо действовать хитрее. То же рассуждение пройдёт, если мы придумаем какое-нибудь континуальное множество, имеющее меру ноль. Утверждается, что нам подойдёт Канторово множество.
+\end{enumerate}
+\begin{stat}
+Канторово множество имеет мощность континуум, измеримо по Борелю (а, значит, и по Лебегу) и имеет меру Лебега, равную нулю.
+\end{stat}
+\begin{proof}
+Первое утверждение следует из того, что число из отрезка $[0, 1]$ принадлежит Канторову множеству, если и только если оно записывается в троичной записи с помощью цифр $0$ и $2$ (по модулю обработки предельных случаев вида $0,22222...$).
+\\
+Второе утверждение верно, так как мы получили Канторово множество путём выкидывания из отрезка $[0, 1]$ счётного числа открытых интервалов.
+\\
+Посчитаем меру дополнения к Канторову множеству. Мы имеем один отрезок длины $\frac{1}{3}$, два отрезка длины $\frac{1}{9}$, ... $2^{k-1}$ отрезков длины $\frac{n}{3^k}$. Сумма их длин (мер) равна единице (несложно просуммировать ряд), а тогда мера Канторова множества равна $\lambda([0, 1])-\sum_{k=1}^{\infty} \frac{2^{k-1}}{3^k} = 1-1=0$
+\end{proof}
+\end{exl}
+\begin{defn}
+Мера на полукольце $\GA\subseteq \Rho(X)$ называется \se{$\sigma$-конечная мера}{$\sigma$-конечной}, если исходное множество $X$ представляется в виде счётного объединения $\bigcup A_n$, где $A_i \in \GA$, и $\mu(A_i) < \infty$.
+\end{defn}
+\begin{remark}
+Мера Лебега является $\sigma$-конечной.
+\end{remark}
+Измеримые по Борелю множества устроены просто, однако измеримых по Лебегу множеств, как мы увидели, значительно больше, и про их структуру мы пока ещё ничего не знаем. Но это ситуация поправимая, ведь существует
+\begin{stat} Белов называл его гордым словосочетанием \se{Теорема о структуре измеримых множеств}{<<теорема о структуре измеримых множеств>>}
+\\ 
+Пусть $A \in \Sigma$ - (измеримое по Лебегу) множество. Тогда оно представимо в виде разности $B \backslash E$, где $B \in \GB$, а $\lambda(E)=0$
+\end{stat}
+\begin{proof}
+Для начала рассмотрим случай $\lambda(A)< \infty$. Для произвольного $\epsilon>0$ рассмотрим покрытие $A$ попарно дизъюнктными элементами полукольца ячеек $\{c_j\}$ такое, что $\lambda(A)=\mu^*(A)+\epsilon \geq \sum \mu(C_j)$ (здесь мы пользуемся конечностью $\lambda(A)$). Если $C^{\epsilon}=\bigcup C_j$, то $\mu(C^{\epsilon})=\sum \mu(C_j) \leq \lambda(A)+\epsilon$. $D = \bigcap C^{\epsilon} \in \GB$ (хоть написано объединение по всем $\epsilon>0$, достаточно рассмотреть счётную подпоследовательность, стремящуюся к нулю). $\mu(D) = \lim_{\epsilon \ra 0} \mu(C^{\epsilon}) = \lambda(A)$. Также $A \subseteq D$. Тогда $\lambda(A \backslash A) = \mu^*(D \backslash A) = 0$ (в этом месте мы воспользовались измеримостью $A$ - в произвольном случае мы не могли бы использовать аддитивность $mu^*$). Положим теперь $B=D$, $E=A \backslash D$ и получим требуемое.
+\\
+Чтобы свести случай $\lambda(A)=\infty$ к предыдущему, достаточно рассмотреть по отдельности множества $A \cap A_i$ (они также измеримы и имеют конечную меру Лебега в силу $\sigma$-конечности последней), объединить соответствующие им $B_i$ и $E_i$ и воспользоваться тем, что объединение счётного числа множеств меры ноль также имеет меру ноль (по счётной аддитивности $\lambda$).
+\end{proof}
+
+
+Что на самом деле произошло? Мы придумали счётно-аддитивную функцию $\lambda$ на Борелевских множествах, а потом продлили её на $\Sigma$. Но единственно ли это продолжение? Ответ положительный.
+\begin{stat}
+Пусть $P(\RR^n)$ - полукольцо ячеек, $\Sigma$ - измеримые по Лебегу подмножества, $\lambda$ - мера Лебега, и $\Delta$ ($\GB \subseteq \Delta \subseteq \Sigma$) - какая-то другая $\sigma$-алгебра со своей мерой $\nu$ такая, что $\nu_{\upharpoonright \GB} = \lambda_{\upharpoonright \GB}$. Тогда $\nu_{\upharpoonright \Delta} = \lambda_{\upharpoonright \Delta}$
+\end{stat}
+\begin{proof}
+Во-первых, $\nu(E)=0 \iff \lambda(E)=0$, так как множество нулевой меры получается аппроксимацией Борелевскими множествами нулевой меры.
+\\
+Во-вторых, если $A \in \Delta$, то можно найти $E \in \Delta$ такое, что $\mu(E)=\nu(E)=0$, и $A \sqcup E \in \GB $. Но тогда $\mu(A)=\mu(A \sqcup E) -\mu(E)= \nu(A \sqcup E) - \nu(E) = \nu(A)$.
+\end{proof}
+\begin{stat}
+\
+\begin{itemize}
+    \item Мера Лебега инвариантна относительно сдвига. А именно, если $E \in \Sigma$, и $r \in \RR^n$, то $\lambda(E+r)=\lambda(E)$
+    \item Пусть $\mu$ - какая-то счётно-аддитивная мера на $\GB$, инвариантная относительно сдвига. Тогда $\mu=c \lambda$ для некоторой константы $c$.
+\end{itemize}
+\end{stat}
+\begin{proof}
+\begin{itemize}
+\
+    \item Для полуинтервалов это очевидно, а если $\{X_i\}$ - покрытие $E$, то $\{X_i+r\}$ - покрытие $E+r$.
+    \item Для простоты ограничимся одномерным случаем, хотя в случае произвольной размерности доказательство будет таким же. 
+Пусть $c=\mu([0, 1))$. Тогда $\mu(a, b) = c(b-a)$. Действительно, если $b-a = \frac{p}{q} \in \QQ$, то $\mu(a, b) = \mu(0, \frac{p}{q}) = p \cdot \mu(0, \frac{1}{q})=\frac{c}{q}$. А если $b-a \notin \QQ$, то можно приблизить рациональными. Значит, на полуинтервалах меры $\lambda$ и $c \cdot \mu$ совпадают, а, значит, они совпадают везде, так как мера продолжается единственным образом.
+\end{itemize}
+\end{proof}
 
 
 
