--- a/ABSOLUTELY NEW CONSPECTY (3 sem)/algg.tex
+++ b/ABSOLUTELY NEW CONSPECTY (3 sem)/algg.tex
@@ -446,6 +446,66 @@ $A \cong B$, $C \cong D$, тогда $Hom(A, C) \cong Hom (B, D)$, причём 
 \begin{proof}
 Первое -- возьмём по представителю из каждого класса эквивалентности по отношению изоморфности. Четвёртое следует из третьего. Третье: $F$ и $G$ задают эквивалентность $C$ и $D$ $A \cong F(G(A))$, но тогда $A = F(G(A))$, построим $G'$, на объектах совпадает с $G$, $f = F(h)$ из хороших свойств $F$, $G(f) := h$.
 \end{proof}
+
+\section{Лемма Йонеды}
+\lemma \se{Лемма Йонеды}{(Лемма Йонеды)} В произвольной категории $C$ бозначим за $h_A$ \cursed{ковариантный функтор} $Hom(A, --)$, а за $Nat(F, G)$ все естественные преобразования функторов $F$ и $G$. Тогда теорема утверждает, что $Nat(h_a, F) \simeq F(A)$, где F действует из некоторой категории $C$ в $Sets$. \\
+
+Доказательство:\\
+Сначала подберем отображение "слева-направо": \\
+Есть естественное преобразование $\eta: h_A \ra F$, задача состоит в том, чтобы поставить ему в соответствие элемент из $F(A)$. Посмотрим, как оно действует на A: $Hom(A, A) \stackrel{\eta_A}{\ra} F(A)$. Т.к. C - категория, то в $Hom(A, A)$ есть $id_A$, тогда в соответствии этому естественному преобразованию поставим то, во что отобразится $id_A$, т.е. $G(\eta) = \eta_A(id_A) \in F(A)$. \\
+Теперь "справа-налево": \\
+Задан элемент $a \in F(A)$, ему в соответствие поставим естественное преобразование $\tau: h_A \ra F$ так, что для каждого $X \in Ob\;C$ задано отображение $Hom(A, X) \stackrel{\tau_X}{\ra} F(X)$, действующее следующим образом: $A \stackrel{f}{\ra} X \mapsto F(f)(a)$. Проверим его естественность: \\
+\begin{center}\includegraphics[scale=0.7]{proof-natural.PNG}\end{center}
+По верху: \\
+$f \mapsto F(f)(a) \mapsto (F(g) \circ F(f))(a)$ \\
+По низу: \\
+$f \mapsto f \circ g \mapsto F(f \circ g)(a)$ \\
+Вспомним, что наш функтор ковариантный, а он разворачивает композицию, поэтому наше преобразование действительно естественно. \\
+Теперь остается только проверить, что сопоставления взаимно обратные: \\
+В одну сторону: \\
+$a \in F(a) \longrightarrow A \stackrel{f}{X} \mapsto F(f)(a) \longrightarrow F(id_A)(a) = id_{F(A)}(a) = a$. Сошлось. \\
+В другую: \\
+$\eta_X: A \stackrel{f}{X} \mapsto \eta_A(f) \longrightarrow \eta_A(id_A) \longrightarrow \tau_X: A \stackrel{f}{\ra} X \mapsto F(f)(\eta_A(id_A))$ \\
+$\tau_X(f) = F(f)(\eta_A(id_A)) = \eta_X(Hom(A, f)(id_A)) = \eta_X(f)$. Тоже =).
+\cons $Nat(h_A, h_B) = Hom(A, B) = h_B(A)$
+\cons \se{Вложение Йонеды}{(Вложение Йонеды)} $h_-: C \ra Set^{C^{Op}}$ - полный унивалентный ковариантный функтор, который действует следующим образом: $A \mapsto h_A$, $f: B \ra A \mapsto Hom(f, -)$
+
+\section{Пределы}
+\defn \se{Постоянный функтор}{Постоянный функтор} - это функтор $const_Z: D \ra C$, $Z \in Ob\;C$, действующий следующим образом: $A \mapsto Z$, $f \mapsto id$
+\defn Категория $D$ называется \se{Малая категория(диаграмма)}{малой категорией(диаграммой)}, если ее объекты составляют множество.
+\defn $D$ - малая категория, $F: D \ra C$ - функтор. \se{Предел}{Предел} - это объект $lim\;F$, представляющий функтор, который действует следующим образом: $Z \mapsto Nat(const_Z, F)$
+\remark Предел это "произведение со стрелками, которые надо уважать" \\
+Примеры:
+\begin{enumerate}
+    \item Расслоеное произведение: $D$ - категория с тремя объектами $1, 2, 3$ и стрелками $1 \ra 3$, $2 \ra 3$ - и есть то, во что функтор F переводит это все: $X, Y, W \in Ob\;C$, стрелки $X \ra W$, $Y \ra W$. Пределом такого функтора будет объект $X \times_W Y$ со следующим свойством: $\forall Z \in Ob\;C$ и $Z \ra X$, $Z \ra Y$ $\exists !h: Z \ra X \times_W Y$, сохраняющая коммутативность диаграммы.
+    \begin{center}\includegraphics[scale=0.7]{rassloenaya_bulka.PNG}\end{center}
+    \item Уравнитель морфизмов: $D$ - категория с двумя объектами $1, 2$ и двумя стрелками $1 \ra 2$ - и есть то, во что функтор F переводит это все: $X, Y \in Ob\;C$, две стрелки $f, g: X \ra Y$. Пределом такого функтора будет объект $Eq(f, g)$ со следуюшим свойством: $\forall Z \in Ob\;C$ и $h: Z \ra X$, причем $f \circ h = g \circ h$, $\exists !\alpha: Z \ra Eq(f, g)$, сохраняющая коммутативность диаграммы. \\
+    Уравнитель для $C = Sets$ будет такой: $Eq(f, g) = \{x \in X | f(x) = g(x)\}$
+    \begin{center}\includegraphics[scale=0.7]{uravnitel-dps.PNG}\end{center}
+    \item Пусть в $D$ есть инициальный объект $A$. Тогда $lim\;F = F(A)$
+\end{enumerate}
+\defn \se{Копредел}{Копредел} $F: D \ra C$ - это объект, копредставляющий функтор $G: Z \mapsto Nat(F, const_Z)$. Копредставляющий в том смысле, что $G \simeq Hom(Colim\;F, --)$ \\
+Примеры:
+\begin{enumerate}
+    \item D - дискретная, т.е. есть категория, в которой есть только тождественные морфизмы. $Ob\;D = I$, есть то, во что функтор их переводит: $(X_i \in C)_{i\in I}$. Копределом для такой конструкции называется копроизведение $\coprod X_i$. В $Sets$ это дизъюнктное объединение
+    \item $D$ - категория "два объекта - две параллельные стрелки" (как во втором примере предела). Копределом такого функтора называется коуравнитель $Coeq(f, g)$ со следующим свойством: $\forall Z \in C$ со стрелкой $h: Y \ra Z$, сохраняющей коммутативность диаграммы, т.е. $h \circ f = h \circ g$, $\exists ! \phi: Coeq(f, g) \ra Z$, сохраняющая коммутативность диаграммы
+    \begin{center}\includegraphics[scale=0.7]{couravnitel-toxic.PNG}\end{center}
+    \item D - натуральные числа как упорядоченное множество. Функтор переводит их в $(X_i)_{i \in \mathbb{N}}$. Если предположить, что $C = Sets$ и $X_i \ra X_{i+1}$ - вложения, то $Colim X_i = \cup X_i$
+\end{enumerate}
+\defn Категория $C$ называется \se{полная категория}{полной}, если в $C$ есть все (малые) пределы. Т.е. $\forall D$ - малой и $\forall F: D \ra C$ $\exists \lim F$ \\
+
+
+\theorem $C$ - полная $Lra$ в $C$ существуют произведения и уравнители \\
+
+Доказательство: \\
+$\Ra$ - очевидно (существуют все пределы, значит существуют и их частные случаи) \\
+$\La$: $lim F = Eq()$
+
+\normalfont
+
+
+
+
 \hypertarget{dex}
     \printindex
 %staryi_variant
